# pi-am2315

./: CMakeLists.txt  README.md  test.sh
src/: main.c  pi_am2315.c  pi_am2315.h  version_config.h.in
